src/sdlui.h

typedef int32_t i32;
struct SDLUI_String;
struct SDLUI_Control;
struct SDLUI_ArrayOfControls;
struct SDLUI_Control_Window;
struct SDLUI_Control_Button;
struct SDLUI_Control_SliderInt;
struct SDLUI_Control_CheckBox;
struct SDLUI_Control_ToggleButton;
struct SDLUI_Control_RadioButton;
struct SDLUI_Control_TextBox;
struct SDLUI_Control_TabContainer;
struct SDLUI_Control_Text;
struct SDLUI_Control_ScrollArea;
struct SDLUI_Control_List;
    // sdlui_render
    void SDLUI_DrawText(i32 x, i32 y, const char *text, SDL_Texture *dst);
    void SDLUI_DrawTextRange(i32 x, i32 y, const char *text, i32 start, i32 length, SDL_Texture *dst);
    void SDLUI_Render_Button(SDLUI_Control_Button *btn);
    void SDLUI_Render_SliderInt(SDLUI_Control_SliderInt *si);
    void SDLUI_Render_CheckBox(SDLUI_Control_CheckBox *chk);
    void SDLUI_Render_Text(SDLUI_Control_Text *txt);
    void SDLUI_Render_ToggleButton(SDLUI_Control_ToggleButton *tb);
    void SDLUI_Render_RadioButton(SDLUI_Control_RadioButton *rb);
    void SDLUI_Render_Tabcontainer(SDLUI_Control_TabContainer *tbc);
    void SDLUI_Render_ScrollArea(SDLUI_Control_ScrollArea *sa);
    void SDLUI_Render_TextBox(SDLUI_Control_TextBox *tbx);
    void SDLUI_RenderChild(SDLUI_CONTROL_TYPE type, SDLUI_Control *ctrl);
    void SDLUI_Render_Window(SDLUI_Control_Window *wnd);
    void SDLUI_ForceReDraw();
    void SDLUI_Render();
    // sdlui_usage

	bool SDLUI_Window(SDLUI_Control_Window *wnd);
	bool SDLUI_Button(SDLUI_Control_Button *btn);
	bool SDLUI_SliderInt(SDLUI_Control_SliderInt *si);
	bool SDLUI_CheckBox(SDLUI_Control_CheckBox *chk);
	bool SDLUI_ToggleButton(SDLUI_Control_ToggleButton *tb);
	bool SDLUI_RadioButton(SDLUI_Control_RadioButton *rb);
	bool SDLUI_Text(SDLUI_Control_Text *txt);
	bool SDLUI_TabContainer(SDLUI_Control_TabContainer *tbc);
	bool SDLUI_ScrollArea(SDLUI_Control_ScrollArea *sa);
	bool SDLUI_List(SDLUI_Control_List *lst, const char *cur_item, i32 num_items, i32 cur_index);
	bool SDLUI_TextBox(SDLUI_Control_TextBox *tbx);
	// wrapped member functions
	void SDLUI_TabContainer_add_tab(SDLUI_Control_TabContainer* self, char const *text);
	void SDLUI_TabContainer_set_active_tab(SDLUI_Control_TabContainer* self, i32 index);
	void SDLUI_TabContainer_add_child(SDLUI_Control_TabContainer* self, i32 tab_index, SDLUI_Control *ctrl);
	void SDLUI_ArrayOfControls_create(SDLUI_ArrayOfControls* self);
	void SDLUI_ArrayOfControls_ensure_capacity(SDLUI_ArrayOfControls* self);
	void SDLUI_ArrayOfControls_push(SDLUI_ArrayOfControls* self, SDLUI_Control *elem);
	void SDLUI_ArrayOfControls_pop(SDLUI_ArrayOfControls* self, SDLUI_Control *elem);
	void SDLUI_ArrayOfControls_to_back(SDLUI_ArrayOfControls* self, SDLUI_Control *elem);
	void SDLUI_String_create(SDLUI_String* self, char const *str);
	void SDLUI_String_destroy(SDLUI_String* self);
	void SDLUI_String_modify(SDLUI_String* self, const char *str);
	bool SDLUI_String_insert_char(SDLUI_String* self, char c, i32 pos);
	bool SDLUI_String_delete_char(SDLUI_String* self, i32 pos);