sdlui.c3l/sdlui.c3


// sdlui_render
extern fn void drawText(int x, int y,  char *text, SdlTexture *dst) @cname("SDLUI_DrawText");
extern fn void drawTextRange(int x, int y,  char *text, int start, int length, SdlTexture *dst) @cname("SDLUI_DrawTextRange");
extern fn void render_Button(SDLUI_Control_Button *btn) @cname("SDLUI_Render_Button");
extern fn void render_SliderInt(SDLUI_Control_SliderInt *si) @cname("SDLUI_Render_SliderInt");
extern fn void render_CheckBox(SDLUI_Control_CheckBox *chk) @cname("SDLUI_Render_CheckBox");
extern fn void render_Text(SDLUI_Control_Text *txt) @cname("SDLUI_Render_Text");
extern fn void render_ToggleButton(SDLUI_Control_ToggleButton *tb) @cname("SDLUI_Render_ToggleButton");
extern fn void render_RadioButton(SDLUI_Control_RadioButton *rb) @cname("SDLUI_Render_RadioButton");
extern fn void render_Tabcontainer(SDLUI_Control_TabContainer *tbc) @cname("SDLUI_Render_Tabcontainer");
extern fn void render_ScrollArea(SDLUI_Control_ScrollArea *sa) @cname("SDLUI_Render_ScrollArea");
extern fn void render_TextBox(SDLUI_Control_TextBox *tbx) @cname("SDLUI_Render_TextBox");
extern fn void renderChild(SDLUIControlType type, SDLUI_Control *ctrl) @cname("SDLUI_RenderChild");
extern fn void render_Window(SDLUI_Control_Window *wnd) @cname("SDLUI_Render_Window");
extern fn void forceReDraw() @cname("SDLUI_ForceReDraw");
extern fn void render() @cname("SDLUI_Render");

// sdlui_usage

extern fn bool window(SDLUI_Control_Window *wnd) @cname("SDLUI_Window");
extern fn bool button(SDLUI_Control_Button *btn) @cname("SDLUI_Button");
extern fn bool sliderInt(SDLUI_Control_SliderInt *si) @cname("SDLUI_SliderInt");
extern fn bool checkBox(SDLUI_Control_CheckBox *chk) @cname("SDLUI_CheckBox");
extern fn bool toggleButton(SDLUI_Control_ToggleButton *tb) @cname("SDLUI_ToggleButton");
extern fn bool radioButton(SDLUI_Control_RadioButton *rb) @cname("SDLUI_RadioButton");
extern fn bool text(SDLUI_Control_Text *txt) @cname("SDLUI_Text");
extern fn bool tabContainer(SDLUI_Control_TabContainer *tbc) @cname("SDLUI_TabContainer");
extern fn bool scrollArea(SDLUI_Control_ScrollArea *sa) @cname("SDLUI_ScrollArea");
extern fn bool list(SDLUI_Control_List *lst,  char *cur_item, int num_items, int cur_index) @cname("SDLUI_List");
extern fn bool textBox(SDLUI_Control_TextBox *tbx) @cname("SDLUI_TextBox");

// wrapped member functions
extern fn void tab_container_add_tab(SDLUI_Control_TabContainer* self, char  *text) @cname("SDLUI_TabContainer_add_tab");
extern fn void tab_container_set_active_tab(SDLUI_Control_TabContainer* self, int index) @cname("SDLUI_TabContainer_set_active_tab");
extern fn void tab_container_add_child(SDLUI_Control_TabContainer* self, int tab_index, SDLUI_Control *ctrl) @cname("SDLUI_TabContainer_add_child");

extern fn void arrayOfControls_create(SDLUI_ArrayOfControls* self) @cname("SDLUI_ArrayOfControls_create");
extern fn void arrayOfControls_ensure_capacity(SDLUI_ArrayOfControls* self) @cname("SDLUI_ArrayOfControls_ensure_capacity");
extern fn void arrayOfControls_push(SDLUI_ArrayOfControls* self, SDLUI_Control *elem) @cname("SDLUI_ArrayOfControls_push");
extern fn void arrayOfControls_pop(SDLUI_ArrayOfControls* self, SDLUI_Control *elem) @cname("SDLUI_ArrayOfControls_pop");
extern fn void arrayOfControls_to_back(SDLUI_ArrayOfControls* self, SDLUI_Control *elem) @cname("SDLUI_ArrayOfControls_to_back");

extern fn void string_create(SDLUI_String* self, char  *str) @cname("SDLUI_String_create") ;
extern fn void string_destroy(SDLUI_String* self) @cname("SDLUI_String_destroy") ;
extern fn void string_modify(SDLUI_String* self,  char *str) @cname("SDLUI_String_modify") ;
extern fn bool string_insert_char(SDLUI_String* self, char c, int pos) @cname("SDLUI_String_insert_char") ;
extern fn bool string_delete_char(SDLUI_String* self, int pos) @cname("SDLUI_String_delete_char") ;